--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "name": "",
   "version": "0.0.1",
-  "description": "",
+  "description": "Book trading club",
   "main": "server.js",
+  "engines":{
+    "node":"4.8.4"
+  },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/johnstonbl01/clementinejs-fcc"
+    "url": "git+https://github.com/Siddhant24/Book-Trade-Club"
   },
-  "homepage": "",
-  "bugs": "https://github.com/johnstonbl01/clementinejs-fcc/issues",
+  "homepage": "https://trademybooks.herokuapp.com/",
+  "bugs": "https://github.com/Siddhant24/Book-Trade-Club/issues",
   "keywords": [
     "MongoDB",
     "Mongoose",
